{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 51,
  "lineage": "b5a459f5-4a9b-3d7f-bb8b-99fa3ea6626f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086ea1423ab928150",
            "arn": "arn:aws:ec2:us-east-1:471112888031:elastic-ip/eipalloc-086ea1423ab928150",
            "domain": "vpc",
            "id": "eipalloc-086ea1423ab928150",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-88-121-187.compute-1.amazonaws.com",
            "public_ip": "3.88.121.187",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "Nachiket_Deshpande_NAT_EIP"
            },
            "tags_all": {
              "Name": "Nachiket_Deshpande_NAT_EIP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112888031:internet-gateway/igw-091b24b47cfff93c4",
            "id": "igw-091b24b47cfff93c4",
            "owner_id": "471112888031",
            "region": "us-east-1",
            "tags": {
              "Name": "Nachiket_Deshpande_IGW"
            },
            "tags_all": {
              "Name": "Nachiket_Deshpande_IGW"
            },
            "vpc_id": "vpc-056eefaf38ad7b72e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086ea1423ab928150",
            "association_id": "eipassoc-0a186c6f9748c4e1c",
            "connectivity_type": "public",
            "id": "nat-03665566b021d38ec",
            "network_interface_id": "eni-0a46ace868efd8f89",
            "private_ip": "10.0.1.193",
            "public_ip": "3.88.121.187",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01d140c5e297d99c6",
            "tags": {
              "Name": "Nachiket_Deshpande_NAT_Gateway"
            },
            "tags_all": {
              "Name": "Nachiket_Deshpande_NAT_Gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-044d5df9bbbb44e161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03665566b021d38ec",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-044d5df9bbbb44e16",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112888031",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-044d5df9bbbb44e16"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-091b24b47cfff93c4",
            "id": "r-rtb-01f38c4af74e5009c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-01f38c4af74e5009c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112888031",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-01f38c4af74e5009c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112888031:route-table/rtb-044d5df9bbbb44e16",
            "id": "rtb-044d5df9bbbb44e16",
            "owner_id": "471112888031",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "Nachiket_Deshpande_Private_RT"
            },
            "tags_all": {
              "Name": "Nachiket_Deshpande_Private_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-056eefaf38ad7b72e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112888031",
            "id": "rtb-044d5df9bbbb44e16",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112888031:route-table/rtb-01f38c4af74e5009c",
            "id": "rtb-01f38c4af74e5009c",
            "owner_id": "471112888031",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "Nachiket_Deshpande_Public_RT"
            },
            "tags_all": {
              "Name": "Nachiket_Deshpande_Public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-056eefaf38ad7b72e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112888031",
            "id": "rtb-01f38c4af74e5009c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014f16f38767de782",
            "region": "us-east-1",
            "route_table_id": "rtb-044d5df9bbbb44e16",
            "subnet_id": "subnet-0c0edc241ba544927"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff63c86adf694242",
            "region": "us-east-1",
            "route_table_id": "rtb-044d5df9bbbb44e16",
            "subnet_id": "subnet-0b42e85ef8e87bf50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049a9461417517f99",
            "region": "us-east-1",
            "route_table_id": "rtb-01f38c4af74e5009c",
            "subnet_id": "subnet-01d140c5e297d99c6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095db833cd7227098",
            "region": "us-east-1",
            "route_table_id": "rtb-01f38c4af74e5009c",
            "subnet_id": "subnet-0f8c78404f1caf1ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112888031:subnet/subnet-0c0edc241ba544927",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0edc241ba544927",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112888031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Nachiket_Deshpande_Private_Subnet_1"
            },
            "tags_all": {
              "Name": "Nachiket_Deshpande_Private_Subnet_1"
            },
            "vpc_id": "vpc-056eefaf38ad7b72e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112888031",
            "id": "subnet-0c0edc241ba544927",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112888031:subnet/subnet-0b42e85ef8e87bf50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b42e85ef8e87bf50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112888031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Nachiket_Deshpande_Private_Subnet_2"
            },
            "tags_all": {
              "Name": "Nachiket_Deshpande_Private_Subnet_2"
            },
            "vpc_id": "vpc-056eefaf38ad7b72e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112888031",
            "id": "subnet-0b42e85ef8e87bf50",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112888031:subnet/subnet-01d140c5e297d99c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d140c5e297d99c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112888031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Nachiket_Deshpande_Public_Subnet_1"
            },
            "tags_all": {
              "Name": "Nachiket_Deshpande_Public_Subnet_1"
            },
            "vpc_id": "vpc-056eefaf38ad7b72e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112888031",
            "id": "subnet-01d140c5e297d99c6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112888031:subnet/subnet-0f8c78404f1caf1ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8c78404f1caf1ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112888031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Nachiket_Deshpande_Public_Subnet_2"
            },
            "tags_all": {
              "Name": "Nachiket_Deshpande_Public_Subnet_2"
            },
            "vpc_id": "vpc-056eefaf38ad7b72e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112888031",
            "id": "subnet-0f8c78404f1caf1ed",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112888031:vpc/vpc-056eefaf38ad7b72e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-082f8a229906d2c8d",
            "default_route_table_id": "rtb-0bbfdde3ddcaadc93",
            "default_security_group_id": "sg-0c7221b5b7449d86e",
            "dhcp_options_id": "dopt-07626c786173ff429",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-056eefaf38ad7b72e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bbfdde3ddcaadc93",
            "owner_id": "471112888031",
            "region": "us-east-1",
            "tags": {
              "Name": "Nachiket_Deshpande_VPC"
            },
            "tags_all": {
              "Name": "Nachiket_Deshpande_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "471112888031",
            "id": "vpc-056eefaf38ad7b72e",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}